--- a/A_dbms/templates/dbms/article/article-scan.html
+++ b/A_dbms/templates/dbms/article/article-scan.html
@@ -9,6 +9,19 @@
         {% include 'dbms/article/modl/article-edit-mod.html' %}
         {% include 'dbms/article/modl/article-del-mod.html' %}
         {% include 'dbms/article/modl/feedback-add-mod.html' %}
+
+        {% include 'dbms/appraisal/modl/comment-add-mod.html' %}
+        {% include 'dbms/appraisal/modl/supply-add-mod.html' %}
+        {% include 'dbms/appraisal/modl/supply-edit-mod.html' %}
+        {% include 'dbms/appraisal/modl/supply-del-mod.html' %}
+        {% include 'dbms/appraisal/modl/single-add-mod.html' %}
+        {% include 'dbms/appraisal/modl/single-del-mod.html' %}
+        {% include 'dbms/appraisal/modl/lending-add-mod.html' %}
+        {% include 'dbms/appraisal/modl/lending-del-mod.html' %}
+        {% include 'dbms/appraisal/modl/article-sign-mod.html' %}
+        {% include 'dbms/appraisal/modl/article-change-mod.html' %}
+        {% include 'dbms/review/modl/investigate-add-mod.html' %}
+        {% include 'dbms/review/modl/investigate-del-mod.html' %}
     </div>
 {% endblock %}
 
@@ -16,4 +29,17 @@
     {% include 'dbms/article/extra/js-article-edit.html' %}
     {% include 'dbms/article/extra/js-article-del.html' %}
     {% include 'dbms/article/extra/js-feedback-add.html' %}
+
+    {% include 'dbms/appraisal/extra/js-comment-add.html' %}
+    {% include 'dbms/appraisal/extra/js-supply-add.html' %}
+    {% include 'dbms/appraisal/extra/js-supply-edit.html' %}
+    {% include 'dbms/appraisal/extra/js-supply-del.html' %}
+    {% include 'dbms/appraisal/extra/js-single-add.html' %}
+    {% include 'dbms/appraisal/extra/js-single-del.html' %}
+    {% include 'dbms/appraisal/extra/js-lending-add.html' %}
+    {% include 'dbms/appraisal/extra/js-lending-del.html' %}
+    {% include 'dbms/appraisal/extra/js-article-sign.html' %}
+    {% include 'dbms/appraisal/extra/js-article-change.html' %}
+    {% include 'dbms/review/extra/js-investigate-add.html' %}
+    {% include 'dbms/review/extra/js-investigate-del.html' %}
 {% endblock %}
