--- a/A_dbms/templates/dbms/review/modl/investigate-del-mod.html
+++ b/A_dbms/templates/dbms/review/modl/investigate-del-mod.html
@@ -4,7 +4,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title" id="delInvestigateModalLabel">删除补调
-                    {% if PAGE_TITLE == '项目评审' %}
+                    {% if PAGE_TITLE == '项目详情' or PAGE_TITLE == '项目评审' %}
                         <input style="display: none" name="custom_id" value="{{ article_obj.custom.id }}">
                     {% elif  PAGE_TITLE == '保后详情' %}
                         <input style="display: none" name="custom_id" value="{{ custom_obj.id }}">
