项目article_sign_ajax，区分签批流程和会决流程

--- a/A_dbms/templates/dbms/agree/scan/agree-summry.html
+++ b/A_dbms/templates/dbms/agree/scan/agree-summry.html
@@ -2,6 +2,7 @@
     <div class="panel-heading">
         <label>合同情况</label>
         <label class="navbar-right">
+            <a class="btn btn-danger btn-sm " id="sub">提交</a>
             <a class="btn btn-primary btn-sm" target="_blank"
                href="{% url 'dbms:agree_preview' agree_id=agree_obj.id %}">预览 </a>
             <a class="btn btn-primary btn-sm" target="_blank"
