--- a/A_dbms/templates/dbms/article/article-scan.html
+++ b/A_dbms/templates/dbms/article/article-scan.html
@@ -9,6 +9,7 @@
         {% include 'dbms/article/modl/article-edit-mod.html' %}
         {% include 'dbms/article/modl/article-del-mod.html' %}
         {% include 'dbms/article/modl/feedback-add-mod.html' %}
+        {% include 'dbms/article/modl/article-sub-mod.html' %}
 
         {% include 'dbms/appraisal/modl/comment-add-mod.html' %}
         {% include 'dbms/appraisal/modl/supply-add-mod.html' %}
@@ -22,6 +23,8 @@
         {% include 'dbms/appraisal/modl/article-change-mod.html' %}
         {% include 'dbms/review/modl/investigate-add-mod.html' %}
         {% include 'dbms/review/modl/investigate-del-mod.html' %}
+
+
     </div>
 {% endblock %}
 
@@ -29,6 +32,7 @@
     {% include 'dbms/article/extra/js-article-edit.html' %}
     {% include 'dbms/article/extra/js-article-del.html' %}
     {% include 'dbms/article/extra/js-feedback-add.html' %}
+    {% include 'dbms/article/extra/js-article-sub.html' %}
 
     {% include 'dbms/appraisal/extra/js-comment-add.html' %}
     {% include 'dbms/appraisal/extra/js-supply-add.html' %}
