--- a/A_dbms/templates/dbms/article/scan/article-summry.html
+++ b/A_dbms/templates/dbms/article/scan/article-summry.html
@@ -3,6 +3,7 @@
         <label>项目情况</label>
         <label class="navbar-right">
             {% if PAGE_TITLE == '项目详情' %}
+                <a class="btn btn-danger btn-sm " id="subArticle">提交</a>
                 {% if 'article_feedback_ajax' in authority_list %}
                     <a class="btn btn-primary btn-sm " id="feedbackArticle">反馈</a><!--#path('article/del/'-->
                 {% endif %}
@@ -10,7 +11,7 @@
                     <a class="btn btn-primary btn-sm " id="editArticle">修改</a><!--#path('article/del/'-->
                 {% endif %}
                 {% if 'article_del_ajax' in authority_list %}
-                    <a class="btn btn-danger btn-sm " id="delArticle">删除</a><!--#path('article/del/'-->
+                    <a class="btn btn-primary btn-sm " id="delArticle">删除</a><!--#path('article/del/'-->
                 {% endif %}
                 {% if 'appraisal_supply_ajax' in authority_list %}
                     <a class="btn btn-primary btn-sm " id="addSupplyB">补调问题</a>
@@ -21,6 +22,8 @@
                 {% if 'appraisal_lending_order_ajax' in authority_list %}
                     <a class="btn btn-primary btn-sm " id="lendingOrder">放款次序</a><!--#path('appraisal/lending/add/'-->
                 {% endif %}
+                <a class="btn btn-primary btn-sm " id="summaryScan" target="_blank"
+                   href="{% url 'dbms:appraisal_summary_scan' article_id=article_obj.id %}">意见书</a>
                 {% if 'appraisal_article_sign_ajax' in authority_list %}
                     <a class="btn btn-primary btn-sm " id="articleSignB">项目签批</a><!--#path('appraisal/sign/'-->
                 {% endif %}
@@ -43,22 +46,8 @@
                 {% endif %}
             {% endif %}
             {% if PAGE_TITLE == '项目评审' %}
-                <a class="btn btn-primary btn-sm " id="summaryScan" target="_blank"
-                   href="{% url 'dbms:appraisal_summary_scan' article_id=article_obj.id %}">意见书</a><!--#path(' '-->
                 <a class="btn btn-primary btn-sm " id="signScan" target="_blank"
                    href="{% url 'dbms:appraisal_sign_scan' article_id=article_obj.id %}">签批单</a><!--#path(' '-->
-                {% if 'appraisal_supply_ajax' in authority_list %}
-                    <a class="btn btn-primary btn-sm " id="addSupplyB">补调问题</a>
-                {% endif %}
-                {% if 'appraisal_article_sign_ajax' in authority_list %}
-                    <a class="btn btn-primary btn-sm " id="articleSignB">项目签批</a><!--#path('appraisal/sign/'-->
-                {% endif %}
-                {% if 'appraisal_article_change_ajax' in authority_list %}
-                    <a class="btn btn-primary btn-sm " id="articleChangeB">项目变更</a><!--#path('appraisal/sign/'-->
-                {% endif %}
-                {% if 'investigate_add_ajax' in authority_list %}
-                    <a class="btn btn-primary btn-sm " id="investigateB">补充调查</a><!--#path('custom/del/'-->
-                {% endif %}
             {% endif %}
 
         </label>
