添加小贷相干功能

--- a/A_dbms/templates/dbms/agree/agree_board/entrust-single-l.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust-single-l.html
@@ -80,7 +80,7 @@
     <p><strong>第九条</strong> 保函有效期届满或保证义务履行完毕，乙方应将保函正本收回并退还甲方；若保函正本不能退回的，乙方应提供受益人出具的保函失效的书面文件或保证义务完结的证明文件。</p>
     <p>保函有效期届满，若乙方未能履行上述义务的，应向甲方支付逾期保费。逾期保费从保函有效期届满之日起算，到保函正本退回或受益人出具保函失效的书面文件、保证义务完结的证明文件收到之日截止，按本合同第二条（一）款规定的担保费率计算收取。</p>
     <p><strong>第十条 甲方的追偿权</strong></p>
-    <p>甲方按照本合同的约定承担了保证责任后，即有权要求乙方立即归还甲方代偿的全部款项及甲方实现债权的费用，乙方另外应支付甲方代偿之日起企业银行同期贷款利息、罚息，并按上述代偿款项的 %一次性支付违约金。</p>
+    <p>甲方按照本合同的约定承担了保证责任后，即有权要求乙方立即归还甲方代偿的全部款项及甲方实现债权的费用，乙方另外应支付甲方代偿之日起企业银行同期贷款利息、罚息，并按上述代偿款项的<b>5%</b>一次性支付违约金。</p>
     <p><strong>第十一条 争议的解决</strong></p>
     <p>本合同发生争议或纠纷时，甲乙双方当事人可以通过协商解决，协商不成的，应向甲方所在地人民法院提起诉讼。</p>
     <p><strong>第十二条</strong> 如甲方代乙方履行清偿义务，甲方向乙方行使追偿权的期限为自甲方履行代偿之日起两年止。</p>
