--- a/A_dbms/templates/dbms/agree/agree_board/sign-j.html
+++ b/A_dbms/templates/dbms/agree/agree_board/sign-j.html
@@ -1,4 +1,4 @@
-<p>甲方（公章或合同专用章）：成都武侯中小企业融资担保有限责任公司</p>
+<p>甲方（公章或合同专用章）：{{ UN }}</p>
 <p>法定代表人（或授权代理人）：何长见</p>
 <p>（签字或盖章）</p>
 {% include 'dbms/agree/agree_board/sign-date.html' %}
